test/good/tuples/default01.px

t: Int*Bool
print t
