test/bad/tuples/decl03.px

Int*Bool t = 1, true, ""
